@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: RainbruRPG logger
+Description: The RainbruRPG's modules and extensions handling library.
+Version: @VERSION@
+Libs: -L${libdir} -lrainbrurpg-@PACKAGE@
+Cflags: -I${includedir}/rainbrurpg/@PACKAGE@
